Lesson_47/clusterip.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deploy
  labels:
    app : k8s-application
    env: practice-room
    owner: dos11-student
spec: 
  replicas: 2
  selector:
    matchLabels:
      project: dos11
  template:
    metadata:
      labels:
        project: dos11
    spec:
      containers:
        - name : my-own-nginx
          image: kpk666/docker_practice:nginx1.23.3
          ports:
           - containerPort: 80   

---
apiVersion: v1
kind: Service
metadata:
  name: my-service-cip
  labels: 
    env: practice
    owner: dos11-student
spec:
  selector:
    project: dos11
  type: ClusterIP
  ports:
  - name: my-cluster-svc
    protocol: TCP
    port: 8080
    targetPort: 80
